@@ -501,9 +501,16 @@ SCIP_RETCODE applyVbounds(
       if( !SCIPisInfinity(scip, timelimit) )
          timelimit -= SCIPgetSolvingTime(scip);
       SCIP_CALL( SCIPgetRealParam(scip, "limits/memory", &memorylimit) );
+
+      /* substract the memory already used by the main SCIP and the estimated memory usage of external software */
       if( !SCIPisInfinity(scip, memorylimit) )
+      {
          memorylimit -= SCIPgetMemUsed(scip)/1048576.0;
-      if( timelimit <= 0.0 || memorylimit <= 0.0 )
+         memorylimit -= SCIPgetMemExternEstim(scip)/1048576.0;
+      }
+
+      /* abort if no time is left or not enough memory to create a copy of SCIP, including external memory usage */
+      if( timelimit <= 0.0 || memorylimit <= 2.0*SCIPgetMemExternEstim(scip) )
       {
          /* free subproblem */
          SCIPfreeBufferArray(scip, &subvars);
