@@ -1771,11 +1771,18 @@ SCIP_RETCODE solveSubscip(
 
    /* determine memorylimit */
    SCIP_CALL( SCIPgetRealParam(scip, "limits/memory", &memorylimit) );
-   if ( sepadata->memorylimit < memorylimit )
+   if( sepadata->memorylimit < memorylimit )
       memorylimit = sepadata->memorylimit;
-   if ( ! SCIPisInfinity(scip, memorylimit) )
+
+   /* substract the memory already used by the main SCIP and the estimated memory usage of external software */
+   if( !SCIPisInfinity(scip, memorylimit) )
+   {
       memorylimit -= SCIPgetMemUsed(scip)/1048576.0;
-   if ( memorylimit > 0.0 )
+      memorylimit -= SCIPgetMemExternEstim(scip)/1048576.0;
+   }
+
+   /* abort if not enough memory is left to create a copy of SCIP, including external memory usage */
+   if( memorylimit > 2.0*SCIPgetMemExternEstim(scip) )
    {
       SCIP_CALL( SCIPsetRealParam(subscip, "limits/memory", memorylimit) );
    }
